Pequena mudança no nome (de Frota para Nome)

--- a/calculadoraTeste/index.html
+++ b/calculadoraTeste/index.html
@@ -26,14 +26,14 @@
         <div class="boxTituloInp"><p class="pInp">Modelo ônibus(ambas as frotas): </p><input type="text" id="ipt_modelo"></div>
     </div>
     <div class="boxInput">
-        <div class="frota frota1"> <h2>Frota 1</h2> 
+        <div class="frota frota1"> <h2>Linha maior</h2> 
             Número de ônibus rodando: <input type="text" id="ipt_nOnibus1"> <br>
             Média de passageiros no ônibus: <input type="text" id="ipt_media1"> <br>
             Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta1"> <br>
             Número de pessoas que entraram: <input type="text" id="ipt_entrada1"> <br>
             Numero de paradas: <input type="text" id="ipt_paradas1">
         </div>
-        <div class="frota frota2"> <h2>Frota 2</h2>
+        <div class="frota frota2"> <h2>Linha menor</h2>
             Número de ônibus rodando: <input type="text" id="ipt_nOnibus2"> <br>
             Média de passageiros no ônibus: <input type="text" id="ipt_media2"> <br>
             Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta2"> <br>
