Ajuste no HTML da calculadoraTeste-CSS, retirando os breaks duplos para obter simetria.

--- a/calculadoraTeste-CSS/index.html
+++ b/calculadoraTeste-CSS/index.html
@@ -23,10 +23,10 @@
     </div><br><br>
     <div class="container-Pfrota">
         <div class="container-Cfrota"> <h2 class="titleFrota">Frota 1</h2> 
-            Número de ônibus rodando: <input type="text" id="ipt_nOnibus1" class="inpFrotas"> <br><br>
-            Média de passageiros no ônibus: <input type="text" id="ipt_media1" class="inpFrotas"> <br><br>
-            Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta1" class="inpFrotas"> <br><br>
-            Número de pessoas que entraram: <input type="text" id="ipt_entrada1" class="inpFrotas"> 
+            Número de ônibus rodando: <input type="text" id="ipt_nOnibus1" class="inpFrotas"> <br>
+            Média de passageiros no ônibus: <input type="text" id="ipt_media1" class="inpFrotas"> <br>
+            Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta1" class="inpFrotas"> <br>
+            Número de pessoas que entraram: <input type="text" id="ipt_entrada1" class="inpFrotas"> <br>
             Numero de paradas: <input type="text" id="ipt_paradas1" class="inpFrotas">
         </div>
         <div class="container-Cfrota"> <h2 class="titleFrota">Frota 2</h2>
