--- a/calculadoraTeste-CSS/index.html
+++ b/calculadoraTeste-CSS/index.html
@@ -351,8 +351,8 @@ ${arrecadado2.toFixed(2)}
         div_mensagem.innerHTML += `<br><div class="divseparator"></div><br>
         <b style="font-size: 18;">
         O prejuízo evitado, comparando ambos os prejuízos de ambos os ônibus, se dá por<b class="txtresults"> ${difPreju.toFixed(2)}</b>. <br>
-        O prejuízo antes da mudança seria de aproximadamente <b class="txtresults">R$${prejutotAntes}</b><br>
-        O prejuízo depois da mudança seria de aproximadamente <b class="txtresults">R$${prejutotDepois}</b><br> <br> <br>
+        O prejuízo antes da mudança seria de aproximadamente <b class="txtresults">R$${prejutotAntes.toFixed(2)}</b><br>
+        O prejuízo depois da mudança seria de aproximadamente <b class="txtresults">R$${prejutotDepois.toFixed(2)}</b><br> <br> <br>
         </b>`
     }}
 </script>
