--- a/calculadoraTeste-CSS/index.html
+++ b/calculadoraTeste-CSS/index.html
@@ -347,7 +347,7 @@ ${arrecadado2.toFixed(2)}
         var prejutotAntes = totalAtual1 + totalAtual2;
         var prejutotDepois = totalNovo1 + totalNovo2;
         var difPreju = prejutotAntes - prejutotDepois;
-
+// MENSAGEM FINAL
         div_mensagem.innerHTML += `<br><div class="divseparator"></div><br>
         <b style="font-size: 18;">
         O prejuízo evitado, comparando ambos os prejuízos de ambos os ônibus, se dá por<b class="txtresults"> ${difPreju.toFixed(2)}</b>. <br>
