--- a/calculadoraTeste-CSS/index.html
+++ b/calculadoraTeste-CSS/index.html
@@ -72,15 +72,15 @@
         var tmpvolta2 = Number(ipt_tmpvolta2.value);
         var paradas2 = Number(ipt_paradas2.value);
 
-        //calculando variaveis
-        var espera1 = tmpvolta1 / nOnibus1;
-        var espera2 = tmpvolta2 / nOnibus2;
-        var novoespera2 = espera2;
-        var padrao = 0;
-        var totalOnibus = nOnibus1 + nOnibus2;
-        var novoOnibus2 = nOnibus2;
-        var totalP2 = media2 * nOnibus2;
-        var totalP1 = media1 * nOnibus1;
+        //calculando variaveis novas
+        var espera1 = tmpvolta1 / nOnibus1; // tempo de espera linha1 - sem mudanças
+        var espera2 = tmpvolta2 / nOnibus2; // tempo de espera linha1 - sem mudanças
+        var novoespera2 = espera2; // colocando como padrão o "novoespera2" igual ao espera 2
+        var padrao = 0; // Resetando variavel para checar parâmetro (se a média estimada de passageiros da linha 1 é maior do que a da linha 2)
+        var totalOnibus = nOnibus1 + nOnibus2; // Total de ônibus
+        var novoOnibus2 = nOnibus2; // Colocando como padrão o novoOnibus 2 como igual ao onibus2
+        var totalP2 = media2 * nOnibus2; // Total de passageiros na linha 2
+        var totalP1 = media1 * nOnibus1; // Total de passageiros na linha 1 
         // Trocando o peso e limite conforme o modelo
         if (modelo == 'micro') {
             pesoO = 6000;
@@ -114,33 +114,31 @@
             if (novoespera2 < 30) {
                 novoOnibus2 = novoOnibus2 - 1;
                 novoespera2 = tmpvolta2 / novoOnibus2;
-            }
+            } // Se o tempo de espera 2 for menor que 30 minutos, se retira um onibus e calcula novamente o tempo de espera
 
             if (novoespera2 > 30) {
                 novoOnibus2 += 1;
                 novoespera2 = tmpvolta2 / novoOnibus2;
-            }
+            } // Checando se o tempo excedeu 30 minutos, se excedeu, volta atrás (soma um ônibus e calcula o novoespera2 novamente)
 
             if (novoespera2 < 30) {
                 novoOnibus2 = novoOnibus2 - 1;
                 novoespera2 = tmpvolta2 / novoOnibus2;
-            }
+            } // o processo se repete para retirar outro ônibus
 
             if (novoespera2 > 30) {
                 novoOnibus2 += 1;
                 novoespera2 = tmpvolta2 / novoOnibus2;
-            }
+            }// o processo se repete para verificar o tempo de espera
 
+            // Com isso, se tem como limite 2 ônibus realocados.
 
+            var pesoPessoa1 = 70 * media1; // Calculando peso das pessoas no ônibus (70 é a média BR)
+            var pesoTotal1 = pesoO + pesoPessoa1; // Peso pessoa + peso ônibus para peso total
+            var razaoPeso1 = pesoPessoa1 / pesoTotal1; // Razão entre peso pessoa para peso total
+            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1; // A cada 10% de massa adicional, estima-se 4% de combustível extra. Aqui se calcula a % de combustível extra
 
-            var pesoPessoa1 = 70 * media1;
-            var pesoTotal1 = pesoO + pesoPessoa1;
-            var razaoPeso1 = pesoPessoa1 / pesoTotal1;
-            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1;
-            var espera1 = tmpvolta1 / nOnibus1;
-
-            // 253 = numero maximo de pessoas no onibus - 25 tempo parado (maximo de pessoas) 10(tempo minimo em uma parada)   
-            var tempParada1 = (media1 / 253) * 25 + 10;
+            var tempParada1 = (media1 / 253) * 25 + 10; // 253 = numero maximo de pessoas no onibus - 25 tempo parado (maximo de pessoas) 10(tempo minimo em uma parada)
             var gastoParada1 = tempParada1 * 0.0014;// 0.0014 gasto parado de todos os onibus por parada em minutos
             var totParada1 = gastoParada1 * paradas1// Multiplicando por todas as paradas
             // 6.5 = combustivel padrao gasto por hora (velocidade de 16km/h)    
@@ -189,26 +187,25 @@
             ${arrecadado1.toFixed(2)}
         </b>.<br>`
 
-            var OnibusAdd = totalOnibus - novoOnibus2;
+            var OnibusAdd = totalOnibus - novoOnibus2; // Calculando com ônibus adicionais
 
-            var media1 = totalP1 / OnibusAdd;
-            var pesoPessoa1 = 70 * media1;
-            var pesoTotal1 = pesoO + pesoPessoa1;
-            var razaoPeso1 = pesoPessoa1 / pesoTotal1;
-            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1;
-            var espera1 = tmpvolta1 / OnibusAdd;
+            var media1 = totalP1 / OnibusAdd; // Nova média de pessoas por ônibus
+            var pesoPessoa1 = 70 * media1; // Peso de pessoa por ônibus
+            var pesoTotal1 = pesoO + pesoPessoa1; // Novo peso total
+            var razaoPeso1 = pesoPessoa1 / pesoTotal1; // Nova razão de peso
+            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1; // Novo adicional por peso
+            var espera1 = tmpvolta1 / OnibusAdd; // Novo tempo de espera
 
+            var tempParada1 = (media1 / 253) * 25 + 10; // Novo tempo parado
+            var gastoParada1 = tempParada1 * 0.0014; // Novo gasto parado
+            var totParada1 = gastoParada1 * paradas1 // Total de paradas por volta
 
-            var tempParada1 = (media1 / 253) * 25 + 10;
-            var gastoParada1 = tempParada1 * 0.0014;
-            var totParada1 = gastoParada1 * paradas1
+            var litroH1 = (6.5 + totParada1) * porcAdd1; // Novo gasto de combustível por ônibus
 
-            var litroH1 = (6.5 + totParada1) * porcAdd1;
+            var precoNovo1 = litroH1 * nOnibus1 * 6; // Novo preço por hora da linha inteira
 
-            var precoNovo1 = litroH1 * nOnibus1 * 6;
-
-            var nVoltas1 = 1200 / tmpvolta1;
-            var totalNovo1 = precoNovo1 * 20;
+            var nVoltas1 = 1200 / tmpvolta1; // Calculando número novo de voltas
+            var totalNovo1 = precoNovo1 * 20; // Calculando novo preço por dia
 
             if (media1 > limite) {
                 var excedente1 = media1 - limite;
@@ -217,7 +214,7 @@
             } else {
                 var arrecadado1 = media1 * 2.31 * OnibusAdd * nVoltas1;
                 var novaMedia1 = media1;
-            }
+            } // Verificando excedentes
 
             div_mensagem.innerHTML += `
             <h2> Depois </h2>
@@ -250,6 +247,10 @@
 
 
         div_mensagem.innerHTML += '<br><div class="divseparator"> </div>'
+
+        // O mesmo processo se repete para a linha 2, mas removendo N ônibus ao invés de adicionando. Sintam-se livres para me (Giorgio Antunes) perguntar qualquer coisa, eu que fiz esse espaguette de código :>
+        // O CSS foi feito pelo Raul, mas posso tentar ajudar a decifrar.
+        // Boa sorte no projeto!
 
             var pesoPessoa2 = 70 * media2;
             var pesoTotal2 = pesoO + pesoPessoa2;
