--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ ${arrecadado2.toFixed(2)}
 
             var precoNovo2 = litroH2 * novoOnibus2 * 6
             div_mensagem.innerHTML += `
-            <h2>Linha Menos Movintada <br> Antes</h2>
+            <h2>Linha Menos Movintada <br> Depois</h2>
         Preço de uma volta de 
     ${novoOnibus2}
         ônibus, considerando: <b class="txtinner">6 reais o Diesel</b>, <b class="txtinner">6.5 Litros por hora</b> do ônibus:
