Nova versão do Site Institucional

--- a/index.html
+++ b/index.html
@@ -1,359 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Financeiro</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/icon.svg">
-</head>
+    <title>TransControl | Home</title>
 
+</head>
 <body>
     <header>
-        <div><img src="img/logoHorizontalBranca3.svg" alt=""></div>
-        <div class="itemsHeader">
-            <h4>HOME</h4>
-            <h4>SOBRE NÓS</h4>
-            <h4>CALCULADORA</h4>
-            <h4>||</h4>
-            <h4>LOG-IN</h4>
-            <h4>CADASTRO</h4>
-        </div>
-    </header><br><br><br><br>
-    <div class="mdFrota">
-        <h1>Simulador financeiro TransControl</h1>
-        <div>
-            <p>Modelo ônibus(ambas as frotas): </p><input type="text" id="ipt_modelo">
-        </div>
-    </div><br><br>
-    <div class="container-Pfrota">
-        <div class="container-Cfrota">
-            <h2 class="titleFrota">Linha Mais Movimentada</h2>
-            Número de ônibus rodando: <input type="text" id="ipt_nOnibus1" class="inpFrotas"> <br>
-            Demanda de pessoas por ônibus*: <input type="text" id="ipt_media1" class="inpFrotas"> <br>
-            Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta1" class="inpFrotas"> <br>
-            Numero de paradas na linha: <input type="text" id="ipt_paradas1" class="inpFrotas">
-
-            <p style="font-size: small;">*A Demanda se refere ao número necessário de pessoas por ônibus de acordo com o
-                total de passageiros que irão utilizá-los.</p>
-        </div>
-        <div class="container-Cfrota">
-            <h2 class="titleFrota">Linha Menos Movimentada</h2>
-            Número de ônibus rodando: <input type="text" id="ipt_nOnibus2" class="inpFrotas"> <br>
-            Demanda de pessoas por ônibus*: <input type="text" id="ipt_media2" class="inpFrotas"> <br>
-            Tempo para rota completa (minutos): <input type="text" id="ipt_tmpvolta2" class="inpFrotas"> <br>
-            Número de paradas na linha: <input type="text" id="ipt_paradas2" class="inpFrotas">
-        </div>
-    </div>
-    <div><button onclick="calcular()" class="btnCalc">Calcular</button></div>
-    <div class="divresults"><div id="div_mensagem" class="divresults">Os resultados serão Exibidos Aqui</div></div>
+        <nav class="container-nav">
+            <div><img src="./img/LogoSEMescrita.png" alt="Logo da empresa" class="imagem-logo"></div>
+            <div>
+                <ul class="lista-nav">
+                    <a class="lista" href="SiteInstitucional.html"><li>Início</li></a>
+                    <a class="lista"href="#"><li>Sobre Nós</li></a>
+                    <li class="lista">|</li>
+                    <a class="lista" href="#"><li>Login</li></a>
+                    <a class="lista" href="#"><li>Cadastro</li></a>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
 </body>
-
 </html>
-<script>
-    function calcular() {
-
-        // para zerar a div e não exibir os calculos feitos anteriormente        
-        div_mensagem.innerHTML = ``
-        // declarando o padrao (caso não escolha o modelo do onibus)
-        var pesoO = 6000;// Peso do onibus
-        var limite = 47;// Limite de passageiros do onibus
-        var modelo = ipt_modelo.value;
-
-        //Declarando variáveis 
-        var nOnibus1 = Number(ipt_nOnibus1.value);
-        var media1 = Number(ipt_media1.value);
-        var tmpvolta1 = Number(ipt_tmpvolta1.value);
-        var paradas1 = Number(ipt_paradas1.value);
-
-        var nOnibus2 = Number(ipt_nOnibus2.value);
-        var media2 = Number(ipt_media2.value);
-        var tmpvolta2 = Number(ipt_tmpvolta2.value);
-        var paradas2 = Number(ipt_paradas2.value);
-
-        //calculando variaveis novas
-        var espera1 = tmpvolta1 / nOnibus1; // tempo de espera linha1 - sem mudanças
-        var espera2 = tmpvolta2 / nOnibus2; // tempo de espera linha1 - sem mudanças
-        var novoespera2 = espera2; // colocando como padrão o "novoespera2" igual ao espera 2
-        var padrao = 0; // Resetando variavel para checar parâmetro (se a média estimada de passageiros da linha 1 é maior do que a da linha 2)
-        var totalOnibus = nOnibus1 + nOnibus2; // Total de ônibus
-        var novoOnibus2 = nOnibus2; // Colocando como padrão o novoOnibus 2 como igual ao onibus2
-        var totalP2 = media2 * nOnibus2; // Total de passageiros na linha 2
-        var totalP1 = media1 * nOnibus1; // Total de passageiros na linha 1 
-        // Trocando o peso e limite conforme o modelo
-        if (modelo == 'micro') {
-            pesoO = 6000;
-            limite = 47;
-        }
-        if (modelo == 'padron') {
-            pesoO = 16000;
-            limite = 89;
-        }
-        if (modelo == 'basico') {
-            pesoO = 16000;
-            limite = 92;
-        }
-        if (modelo == 'articulado') {
-            pesoO = 26000;
-            limite = 200;
-        }
-        if (modelo == 'biarticulado') {
-            pesoO = 36000;
-            limite = 253;
-        }
-        // Validando se o maior valor é o da esquerda
-        if (media1 >= media2) {
-            padrao = 1
-        } else {
-            alert(`Coloque o maior valor de media de passageiros na primeira caixa `)
-        }
-
-        if (padrao == 1) {
-            // Trocando onibus da frota vazia para mais cheia caso o tempo de espera nao passe de 30 minutos
-            if (novoespera2 < 30) {
-                novoOnibus2 = novoOnibus2 - 1;
-                novoespera2 = tmpvolta2 / novoOnibus2;
-            } // Se o tempo de espera 2 for menor que 30 minutos, se retira um onibus e calcula novamente o tempo de espera
-
-            if (novoespera2 > 30) {
-                novoOnibus2 += 1;
-                novoespera2 = tmpvolta2 / novoOnibus2;
-            } // Checando se o tempo excedeu 30 minutos, se excedeu, volta atrás (soma um ônibus e calcula o novoespera2 novamente)
-
-            if (novoespera2 < 30) {
-                novoOnibus2 = novoOnibus2 - 1;
-                novoespera2 = tmpvolta2 / novoOnibus2;
-            } // o processo se repete para retirar outro ônibus
-
-            if (novoespera2 > 30) {
-                novoOnibus2 += 1;
-                novoespera2 = tmpvolta2 / novoOnibus2;
-            }// o processo se repete para verificar o tempo de espera
-
-            // Com isso, se tem como limite 2 ônibus realocados.
-
-            var pesoPessoa1 = 70 * media1; // Calculando peso das pessoas no ônibus (70 é a média BR)
-            var pesoTotal1 = pesoO + pesoPessoa1; // Peso pessoa + peso ônibus para peso total
-            var razaoPeso1 = pesoPessoa1 / pesoTotal1; // Razão entre peso pessoa para peso total
-            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1; // A cada 10% de massa adicional, estima-se 4% de combustível extra. Aqui se calcula a % de combustível extra
-
-            var tempParada1 = (media1 / 253) * 25 + 10; // 253 = numero maximo de pessoas no onibus - 25 tempo parado (maximo de pessoas) 10(tempo minimo em uma parada)
-            var gastoParada1 = tempParada1 * 0.0014;// 0.0014 gasto parado de todos os onibus por parada em minutos
-            var totParada1 = gastoParada1 * paradas1// Multiplicando por todas as paradas
-            // 6.5 = combustivel padrao gasto por hora (velocidade de 16km/h)    
-            var litroH1 = (6.5 + totParada1) * porcAdd1;
-
-            var precoAtual1 = litroH1 * nOnibus1 * 6;// Calculando usando o preço do disel para todos os onibus
-
-            var nVoltas1 = 1200 / tmpvolta1; //Numero de vezes q o onibus roda (1200 é 20 horas em minutos)
-            var totalAtual1 = precoAtual1 * 20; //Total de gasto por um dia (Horas rodadas por dia * preço da hora)
-
-            if (media1 > limite) {// Se o numero de pessoas for maior do q o que cabe no onibus
-                var excedente1 = media1 - limite;
-                var novaMedia1 = media1 - excedente1;
-                var arrecadado1 = novaMedia1 * 2.31 * nOnibus1 * nVoltas1;
-            } else {
-                var arrecadado1 = media1 * 2.31 * nOnibus1 * nVoltas1;
-                var novaMedia1 = media1;
-            }
-
-            div_mensagem.innerHTML += `
-        <hr><h2>Linha Mais Movimentada<br>Antes</h2> 
-        Preço de uma volta de 
-            ${nOnibus1} 
-        ônibus, considerando: <b class="txtinner">6 reais o Diesel</b>, <b class="txtinner">6.5 Litros por hora</b> do ônibus:
-        <br><b class="txtresults">Preço combustível por hora: R$
-            ${precoAtual1.toFixed(2)}
-            </b>.<br>
-        Para obter um valor diário, se multiplica o valor da hora por <b class="txtinner">20</b> (horário médio de funcionamento):
-        <br><b class="txtresults">Preço combustível por dia: R$
-            ${totalAtual1.toFixed(2)}
-            </b>.<br>
-        O tempo de espera estimado, é dado pela <b class="txtinner">razão</b> entre o <b class="txtinner">número de ônibus</b> e o <b class="txtinner">tempo para uma volta completa</b>: 
-        <br><b class="txtresults">Tempo estimado de espera: 
-            ${espera1.toFixed(2)} 
-            minutos</b>.<br>
-        Considerando um excedente de 
-            ${excedente1} 
-        pessoas, dado pelo limite do modelo de ônibus 
-            ${modelo}
-        , obtém-se a média de pessoas:
-        <br><b class="txtresults"> A média de pessoas estima-se em 
-            ${novaMedia1} 
-        pessoas</b>.<br>
-        O valor arrecadado considera a tarida média em R$2,31, fazendo a média entre preço completo, gratuidades e passagens com 50% de desconto. O valor é multiplicado pelo <b class="txtinner">número de ônibus</b>, <b class="txtinner">número de voltas</b> e a <b class="txtinner">média de passageiros</b>, e obtém-se:
-        <br><b class="txtresults">O valor arrecadado é estimado em R$
-            ${arrecadado1.toFixed(2)}
-        </b>.<br>`
-
-            var OnibusAdd = totalOnibus - novoOnibus2; // Calculando com ônibus adicionais
-
-            var media1 = totalP1 / OnibusAdd; // Nova média de pessoas por ônibus
-            var pesoPessoa1 = 70 * media1; // Peso de pessoa por ônibus
-            var pesoTotal1 = pesoO + pesoPessoa1; // Novo peso total
-            var razaoPeso1 = pesoPessoa1 / pesoTotal1; // Nova razão de peso
-            var porcAdd1 = ((razaoPeso1 / 10) * 4) + 1; // Novo adicional por peso
-            var espera1 = tmpvolta1 / OnibusAdd; // Novo tempo de espera
-
-            var tempParada1 = (media1 / 253) * 25 + 10; // Novo tempo parado
-            var gastoParada1 = tempParada1 * 0.0014; // Novo gasto parado
-            var totParada1 = gastoParada1 * paradas1 // Total de paradas por volta
-
-            var litroH1 = (6.5 + totParada1) * porcAdd1; // Novo gasto de combustível por ônibus
-
-            var precoNovo1 = litroH1 * nOnibus1 * 6; // Novo preço por hora da linha inteira
-
-            var nVoltas1 = 1200 / tmpvolta1; // Calculando número novo de voltas
-            var totalNovo1 = precoNovo1 * 20; // Calculando novo preço por dia
-
-            if (media1 > limite) {
-                var excedente1 = media1 - limite;
-                var novaMedia1 = media1 - excedente1;
-                var arrecadado1 = novaMedia1 * 2.31 * OnibusAdd * nVoltas1;
-            } else {
-                var arrecadado1 = media1 * 2.31 * OnibusAdd * nVoltas1;
-                var novaMedia1 = media1;
-            } // Verificando excedentes
-
-            div_mensagem.innerHTML += `
-            <h2> Depois </h2>
-        Preço de uma volta de 
-        ${OnibusAdd}
-        ônibus, considerando: <b class="txtinner">6 reais o Diesel</b>, <b class="txtinner">6.5 Litros por hora</b> do ônibus:
-        <br><b class="txtresults">Preço combustível por hora: R$
-        ${precoNovo1.toFixed(2)}
-            </b>.<br>
-        Para obter um valor diário, se multiplica o valor da hora por <b class="txtinner">20</b> (horário médio de funcionamento):
-        <br><b class="txtresults">Preço combustível por dia: R$
-        ${totalNovo1.toFixed(2)}
-            </b>.<br>
-        O tempo de espera estimado, é dado pela <b class="txtinner">razão</b> entre o <b class="txtinner">número de ônibus</b> e o <b class="txtinner">tempo para uma volta completa</b>: 
-        <br><b class="txtresults">Tempo estimado de espera: 
-        ${espera1.toFixed(2)}
-            minutos</b>.<br>
-        Considerando um excedente de 
-        ${excedente1}
-        pessoas, dado pelo limite do modelo de ônibus 
-        ${modelo}
-        , obtém-se a média de pessoas:
-        <br><b class="txtresults"> A média de pessoas estima-se em 
-        ${media1.toFixed(0)}
-        pessoas</b>.<br>
-        O valor arrecadado considera a tarida média em R$2,31, fazendo a média entre preço completo, gratuidades e passagens com 50% de desconto. O valor é multiplicado pelo <b class="txtinner">número de ônibus</b>, <b class="txtinner">número de voltas</b> e a <b class="txtinner">média de passageiros</b>, e obtém-se:
-        <br><b class="txtresults">O valor arrecadado é estimado em R$
-        ${arrecadado1.toFixed(2)}
-        </b>.<br>`
-
-
-        div_mensagem.innerHTML += '<br><div class="divseparator"> </div>'
-
-        // O mesmo processo se repete para a linha 2, mas removendo N ônibus ao invés de adicionando. Sintam-se livres para me (Giorgio Antunes) perguntar qualquer coisa, eu que fiz esse espaguette de código :>
-        // O CSS foi feito pelo Raul, mas posso tentar ajudar a decifrar.
-        // Boa sorte no projeto!
-
-            var pesoPessoa2 = 70 * media2;
-            var pesoTotal2 = pesoO + pesoPessoa2;
-            var razaoPeso2 = pesoPessoa2 / pesoTotal2;
-            var porcAdd2 = ((razaoPeso2 / 10) * 4) + 1;
-            var espera2 = tmpvolta2 / nOnibus2;
-
-            var tempParada2 = (media2 / 253) * 25 + 10;
-            var gastoParada2 = tempParada2 * 0.0014;
-            var totParada2 = gastoParada2 * paradas2
-
-            var litroH2 = (6.5 + totParada2) * porcAdd2;
-
-            var precoAtual2 = litroH2 * nOnibus2 * 6;
-
-            var nVoltas2 = 1200 / tmpvolta2;
-            var totalAtual2 = precoAtual2 * 20;
-
-            var arrecadado2 = media2 * 2.31 * nOnibus2 * nVoltas2;
-
-            div_mensagem.innerHTML += `
-            <h2>Linha Menos Movintada <br> Antes</h2>
-        Preço de uma volta de 
-${nOnibus2}
-        ônibus, considerando: <b class="txtinner">6 reais o Diesel</b>, <b class="txtinner">6.5 Litros por hora</b> do ônibus:
-        <br><b class="txtresults">Preço combustível por hora: R$
-${precoAtual2.toFixed(2)} 
-            </b>.<br>
-        Para obter um valor diário, se multiplica o valor da hora por <b class="txtinner">20</b> (horário médio de funcionamento):
-        <br><b class="txtresults">Preço combustível por dia: R$
-${totalAtual2.toFixed(2)}
-            </b>.<br>
-        O tempo de espera estimado, é dado pela <b class="txtinner">razão</b> entre o <b class="txtinner">número de ônibus</b> e o <b class="txtinner">tempo para uma volta completa</b>: 
-        <br><b class="txtresults">Tempo estimado de espera: 
-${espera2.toFixed(2)}
-            minutos</b>.<br>
-${modelo}
-        , obtém-se a média de pessoas:
-        <br><b class="txtresults"> A média de pessoas estima-se em 
-${media2.toFixed(0)}
-        pessoas</b>.<br>
-        O valor arrecadado considera a tarida média em R$2,31, fazendo a média entre preço completo, gratuidades e passagens com 50% de desconto. O valor é multiplicado pelo <b class="txtinner">número de ônibus</b>, <b class="txtinner">número de voltas</b> e a <b class="txtinner">média de passageiros</b>, e obtém-se:
-        <br><b class="txtresults">O valor arrecadado é estimado em R$
-${arrecadado2.toFixed(2)}
-        </b>.<br>`
-
-            var media2 = totalP2 / novoOnibus2;
-
-            var pesoPessoa2 = 70 * media2;
-            var pesoTotal2 = pesoO + pesoPessoa2;
-            var razaoPeso2 = pesoPessoa2 / pesoTotal2;
-            var porcAdd2 = ((razaoPeso2 / 10) * 4) + 1;
-            var espera2 = tmpvolta2 / novoOnibus2;
-
-            var tempParada2 = (media2 / 253) * 25 + 10;
-            var gastoParada2 = tempParada2 * 0.0014;
-            var totParada2 = gastoParada2 * paradas2
-
-            var litroH2 = (6.5 + totParada2) * porcAdd2;
-
-            var precoAtual2 = litroH2 * novoOnibus2 * 6;
-
-            var nVoltas2 = 1200 / tmpvolta2;
-            var totalNovo2 = precoAtual2 * 20;
-
-            var arrecadado2 = media2 * 2.31 * novoOnibus2 * nVoltas2;
-
-            var precoNovo2 = litroH2 * novoOnibus2 * 6
-            div_mensagem.innerHTML += `
-            <h2>Linha Menos Movintada <br> Depois</h2>
-        Preço de uma volta de 
-    ${novoOnibus2}
-        ônibus, considerando: <b class="txtinner">6 reais o Diesel</b>, <b class="txtinner">6.5 Litros por hora</b> do ônibus:
-        <br><b class="txtresults">Preço combustível por hora: R$
-    ${precoNovo2.toFixed(2)}
-            </b>.<br>
-        Para obter um valor diário, se multiplica o valor da hora por <b class="txtinner">20</b> (horário médio de funcionamento):
-        <br><b class="txtresults">Preço combustível por dia: R$
-    ${totalNovo2.toFixed(2)}
-            </b>.<br>
-        O tempo de espera estimado, é dado pela <b class="txtinner">razão</b> entre o <b class="txtinner">número de ônibus</b> e o <b class="txtinner">tempo para uma volta completa</b>: 
-        <br><b class="txtresults">Tempo estimado de espera: 
-    ${espera2.toFixed(2)}
-            minutos</b>.<br>
-    ${modelo}
-        , obtém-se a média de pessoas:
-        <br><b class="txtresults"> A média de pessoas estima-se em 
-    ${media2.toFixed(0)}
-        pessoas</b>.<br>
-        O valor arrecadado considera a tarida média em R$2,31, fazendo a média entre preço completo, gratuidades e passagens com 50% de desconto. O valor é multiplicado pelo <b class="txtinner">número de ônibus</b>, <b class="txtinner">número de voltas</b> e a <b class="txtinner">média de passageiros</b>, e obtém-se:
-        <br><b class="txtresults">O valor arrecadado é estimado em R$
-    ${arrecadado2.toFixed(2)}
-        </b>.<br>`
-
-        var prejutotAntes = totalAtual1 + totalAtual2;
-        var prejutotDepois = totalNovo1 + totalNovo2;
-        var difPreju = prejutotAntes - prejutotDepois;
-// MENSAGEM FINAL
-        div_mensagem.innerHTML += `<br><div class="divseparator"></div><br>
-        <b style="font-size: 18;">
-        O prejuízo evitado, comparando ambos os prejuízos de ambos os ônibus, se dá por<b class="txtresults"> ${difPreju.toFixed(2)}</b>. <br>
-        O prejuízo antes da mudança seria de aproximadamente <b class="txtresults">R$${prejutotAntes.toFixed(2)}</b><br>
-        O prejuízo depois da mudança seria de aproximadamente <b class="txtresults">R$${prejutotDepois.toFixed(2)}</b><br> <br> <br>
-        </b>`
-    }}
-</script>
