Endereçamento das imagens

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
-      href="img/LogoSEMescrita.png"
+      href="../img/LogoSEMescrita.png"
       type="image/x-icon"
     />
     <title>TransControl | Home</title>
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="index.html"
-        ><img src="img/LogoSEMescrita.png" alt="Logo da Empresa"
+        ><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"
       /></a>
       <div class="itemsHeader">
         <h4><a href="index.html">Início</a></h4>
