Enderaçamento de paginas

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,8 +27,8 @@
     <div class="background">
       <div class="underheader">
         <div id="options" class="options">
-          <a href="pages/login.html">Login</a>
-          <a href="pages/TelaDeCadastro1.html">Cadastro</a>
+          <a href="login.html">Login</a>
+          <a href="TelaDeCadastro.html">Cadastro</a>
         </div>
       </div>
 
@@ -119,6 +119,7 @@
       <div class="footer">
         <div class="container">
           <p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
+          <br>
         </div>
       </div>
     </footer>
