Back-end Cadastro empresa

--- a/pages/TelaDeCadastroEMPRESA.html
+++ b/pages/TelaDeCadastroEMPRESA.html
@@ -133,7 +133,7 @@
           return false;
         }
 
-        if (senha === "" || senha.length < 8) {
+        if (senha === "" || senha.length <= 8) {
           alert("Senha inválida! Deve ter pelo menos 8 caracteres");
           return false;
         }
