--- a/pages/index.html
+++ b/pages/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="../img/LogoSEMescrita.png"
-      type="image/x-icon"
-    />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
     <title>TransControl | Home</title>
   </head>
-
   <body>
     <header>
-      <a href="index.html"
-        ><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"
-      /></a>
+      <a href="index.html"><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
       <div class="itemsHeader">
         <h4><a href="index.html">Início</a></h4>
         <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
@@ -114,7 +107,6 @@
         </div>
       </div>
     </section>
-
     <footer>
       <div class="footer">
         <div class="container">
