--- a/pages/TelaDeCadastro.html
+++ b/pages/TelaDeCadastro.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/Cadastro1.css" />
-    <link
-      rel="shortcut icon"
-      href="../img/LogoSEMescrita.png"
-      type="image/x-icon"
-    />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/Cadastro1.css">
+    <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
     <title>TransControl | Cadastro Cliente</title>
   </head>
   <body>
     <header>
-      <a href="../index.html"
-        ><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"
-      /></a>
+      <a href="index.html"><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
       <div class="itemsHeader">
-        <h4><a href="../index.html">Início</a></h4>
-        <h4><a href="../index.html#sobre-nos">Sobre Nós</a></h4>
+        <h4><a href="index.html">Início</a></h4>
+        <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
         <h4>||</h4>
         <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
       </div>
@@ -34,26 +28,20 @@
         <div class="Cadastro">
           <h2>Cadastro</h2>
           <div id="cadastroForm">
-            Nome: <br />
-            <input type="text" id="ipt_nome" placeholder="Nome" /> <br />
-            Email: <br />
-            <input type="email" id="ipt_email" placeholder="Email" /> <br />
-            Senha: <br />
-            <input type="password" id="ipt_senha" placeholder="Senha" /> <br />
-            Confirmar Senha: <br />
-            <input
-              type="password"
-              id="ipt_senhaConfirm"
-              placeholder="Confirmar Senha"
-            />
-            <br />
-            Chave de Acesso: <br />
-            <input type="text" id="ipt_chave" placeholder="Chave de Acesso" />
-            <br />
+            Nome: <br>
+            <input type="text" id="ipt_nome" placeholder="Nome"> <br>
+            Email: <br>
+            <input type="email" id="ipt_email" placeholder="Email"> <br>
+            Senha: <br>
+            <input type="password" id="ipt_senha" placeholder="Senha"> <br>
+            Confirmar Senha: <br>
+            <input type="password" id="ipt_senhaConfirm" placeholder="Confirmar Senha>
+            <br>
+            Chave de Acesso: <br>
+            <input type="text" id="ipt_chave" placeholder="Chave de Acesso">
+            <br>
             <button onclick="validarFormulario()">Cadastrar</button>
-            <a href="TelaDeCadastro2.html" class="link"
-              >É uma Empresa? Cadastre-se aqui!</a
-            >
+            <a href="TelaDeCadastroEMPRESA.html" class="link"> É uma Empresa? Cadastre-se aqui!</a>
           </div>
         </div>
       </div>
