--- a/pages/login.html
+++ b/pages/login.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransControl | Login</title>
-    <link rel="stylesheet" href="./styles/login.css" />
-    <link
-      rel="shortcut icon"
-      href="../img/LogoSEMescrita.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
   </head>
   <body>
     <header>
-      <a href="../index.html"
-        ><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"
-      /></a>
+      <a href="index.html"><img src="../img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
       <div class="itemsHeader">
-        <h4><a href="../index.html">Início</a></h4>
-        <h4><a href="../index.html#sobre-nos">Sobre Nós</a></h4>
+        <h4><a href="index.html">Início</a></h4>
+        <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
         <h4>||</h4>
         <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
       </div>
@@ -33,14 +27,9 @@
       <div class="container">
         <div class="login">
           <h2>Login</h2>
-          <input id="ipt_email" type="text" placeholder="E-mail" required />
-          <input id="ipt_senha" type="password" placeholder="Senha" required />
-          <input
-            id="ipt_confirmaSenha"
-            type="password"
-            placeholder="Confirme a senha"
-            required
-          />
+          <input id="ipt_email" type="text" placeholder="E-mail" required>
+          <input id="ipt_senha" type="password" placeholder="Senha" required>
+          <input id="ipt_confirmaSenha" type="password" placeholder="Confirme a senha" required>
           <button id="botaoEnviar" onclick="validarFormulario()">Entrar</button>
           <a href="TelaDeCadastro1.html" class="link">Ainda não tem login?</a>
         </div>
@@ -93,7 +82,7 @@
         }
 
         alert("Login realizado com sucesso!");
-        window.location.href = "../index.html";
+        window.location.href = "index.html";
 
         return true;
       }
